# PiBoilerPlate

./: CMakeBoilerplateConfig.json  CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: CMakeGenerator.cpp  CMakeGenerator.h  ConfigManager.cpp  ConfigManager.h  DependencyManager.cpp  DependencyManager.h  main.cpp
